# islands

./: README.md
editor/: .gitignore  deno.jsonc  eslint.config.js  index.html  main.js  main.ts  package-lock.json  package.json  side.ts  style.css  vite.config.js
editor/html/: side.html
editor/src/: data.ts  main.ts  side.ts
editor/src/components/: classes.ts  docview.ts  label.ts  location.ts  note.ts  ref.ts
sync-lsp/: Cargo.toml
sync-lsp/src/: args.rs  client.rs  graph.rs  main.rs  noderef.rs
