[package]
name = "islands-sync-lsp"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-lsp = "0.2.2"
async-process = "2.5"
clap = { version = "4.5", features = ["derive"] }
fern = "0.7"
futures = { version = "0.3", default-features = false, features = ["async-await", "std"] }
indexmap = { version = "2.13", features = ["serde"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_urlencoded = "0.7"
tokio = { version = "1.49", features = ["macros", "rt"] }
tower = "0.5"
unwrap_or = "1.0"
urlencoding = "2.1"
